--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navigation Bar -->
     <header>
         <div class="container">
-            <h1>Charity Donation</h1>
+            <h1>Charity Donation to the poorest of the poor</h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -60,7 +60,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Charity Organization. All Rights Reserved.</p>
+            <p>&copy; 2024 niggas Charity Organization. All Rights Reserved.</p>
         </div>
     </footer>
 
