--- a/thankyou.html
+++ b/thankyou.html
@@ -19,7 +19,8 @@
         <div class="container">
             <h2>Thank You for Your Generosity!</h2>
             <p>Your donation will make a big difference. We appreciate your support.</p>
-            <a href="index.html" class="donate-button">Go Back to Home</a>
+            <a href="index.html" class="donate-button">Go Back to Home</a> <br> 
+            <a href="payment.html">pay here</a>
         </div>
     </section>
 
