--- a/index.html
+++ b/index.html
@@ -3,67 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donate Now - Charity to the poorest of the poorest</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Harry's 3D Gun Shooting Game</title>
+    <style>
+        body { margin: 0; overflow: hidden; }
+        canvas { display: block; }
+    </style>
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <header>
-        <div class="container">
-            <h1>Charity Donation to the poorest of the poor</h1>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Main Section with Donation Form -->
-    <section class="donation-section">
-        <div class="container">
-            <h2>Your donation can make a difference</h2>
-            <p>Choose the amount you want to donate:</p>
-
-            <!-- Donation Form -->
-            <form action="thankyou.html" method="GET">
-                <div class="donation-amounts">
-                    <label>
-                        <input type="radio" name="amount" value="10">
-                        $10
-                    </label>
-                    <label>
-                        <input type="radio" name="amount" value="25">
-                        $25
-                    </label>
-                    <label>
-                        <input type="radio" name="amount" value="50">
-                        $50
-                    </label>
-                    <label>
-                        <input type="radio" name="amount" value="100">
-                        $1000
-                    </label>
-                    <label>
-                        <input type="radio" name="amount" value="other">
-                        Other Amount: $<input type="number" name="other_amount" placeholder="Enter Amount">
-                    </label>
-                </div>
-
-                <button type="submit" class="donate-button">Donate Now</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 niggas Charity Organization. All Rights Reserved.</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
